# spatch

./: .envrc  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  flake.nix
docs/notes/: json-patch-tests.md  patch-test-cases.md
examples/: simple-new.json  simple.json  simple.schema.json
nix/: flake.nix
src/: lib.rs  main.rs
src/cli/: diff.rs  mod.rs  query.rs  read.rs
src/diff/: engine.rs  error.rs  mod.rs  options.rs  patch_operations.rs  schema.rs
src/diff/test_util/: mod.rs
src/diff/test_util/json_patch_tests/: mod.rs  spec_tests.json  tests.json
src/diff/test_util/schemas/: simple.schema.json
src/patch/: add.rs  copy.rs  error.rs  mod.rs  move.rs  move_op.rs  remove.rs  replace.rs  test.rs
src/path/: error.rs  mod.rs  parser.rs
src/resolve/: ext.rs  mod.rs
